// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelect integration tests is a snapshot with English localization 1`] = `
<div
  class="w-full  "
  data-testid="test-language-select"
  id=":r9:"
  name="language select"
>
  <label
    class="block mb-1 sr-only"
    id=":ra:-label"
  >
    Language selection
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":ra:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":ra:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      EN
    </button>
    <ul
      aria-labelledby=":ra:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":ra:-listbox"
      role="listbox"
      style="max-height: 69px; min-height: 69px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="RU"
        data-value="ru"
        id=":ra:-list-option-RU"
        role="option"
        tabindex="-1"
      >
        RU
      </li>
      <li
        aria-selected="true"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150 bg-blue-200 text-blue-900 dark:text-blue-300 dark:bg-blue-900   "
        data-label="EN"
        data-value="en"
        id=":ra:-list-option-EN"
        role="option"
        tabindex="-1"
      >
        EN
      </li>
    </ul>
  </div>
</div>
`;

exports[`LanguageSelect integration tests is a snapshot with Russian localization 1`] = `
<div
  class="w-full  "
  data-testid="test-language-select"
  id=":rb:"
  name="language select"
>
  <label
    class="block mb-1 sr-only"
    id=":rc:-label"
  >
    Выбор языка
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rc:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":rc:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      EN
    </button>
    <ul
      aria-labelledby=":rc:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rc:-listbox"
      role="listbox"
      style="max-height: 69px; min-height: 69px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="RU"
        data-value="ru"
        id=":rc:-list-option-RU"
        role="option"
        tabindex="-1"
      >
        RU
      </li>
      <li
        aria-selected="true"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150 bg-blue-200 text-blue-900 dark:text-blue-300 dark:bg-blue-900   "
        data-label="EN"
        data-value="en"
        id=":rc:-list-option-EN"
        role="option"
        tabindex="-1"
      >
        EN
      </li>
    </ul>
  </div>
</div>
`;

exports[`LanguageSelect tests is a basic snapshot 1`] = `
<div
  class="w-full  "
  data-testid="test-language-select"
  id=":r3:"
  name="language select"
>
  <label
    class="block mb-1 sr-only"
    id=":r4:-label"
  >
    Language selection
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":r4:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":r4:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      EN
    </button>
    <ul
      aria-labelledby=":r4:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":r4:-listbox"
      role="listbox"
      style="max-height: 69px; min-height: 69px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="RU"
        data-value="ru"
        id=":r4:-list-option-RU"
        role="option"
        tabindex="-1"
      >
        RU
      </li>
      <li
        aria-selected="true"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150 bg-blue-200 text-blue-900 dark:text-blue-300 dark:bg-blue-900   "
        data-label="EN"
        data-value="en"
        id=":r4:-list-option-EN"
        role="option"
        tabindex="-1"
      >
        EN
      </li>
    </ul>
  </div>
</div>
`;
